--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ button:focus {
 
     .mainhead {
         width: 100%;
+        font-size: 40px;
         margin: 0px;
         padding: 20px 0px 0px 0px;
     }
@@ -193,8 +194,8 @@ button:focus {
     }
 
     button {
-        width: 50%;
-        margin: 0px 0px 20px 25%;
+        width: 40%;
+        margin: 0px 0px 20px 30%;
     }
 
 }
